--- a/Swann-CCTV-MediaConfig-Ansible-Playbook.yml
+++ b/Swann-CCTV-MediaConfig-Ansible-Playbook.yml
@@ -14,10 +14,9 @@
     
         - name: Send POST request to API endpoints
           uri:
-            url: "http://{{ swann_cctv_endpoints }}"
+            url: "http://{{ swann_cctv_endpoints }}:85/API10/setMediaConfig"
             method: POST
             body: "{{ json_content.content | from_json }}"
             body_format: json
             status_code: 200
           register: api_response
-    
