--- a/Swann-CCTV-MediaConfig.yml
+++ b/Swann-CCTV-MediaConfig.yml
@@ -1,5 +1,5 @@
 ---
-    - name: POST Configuration to Swann CCTV
+    - name: Swann CCTV MediaConfig
       hosts: swann_cctv_endpoints
       gather_facts: no
       vars:
